--- a/example1.html
+++ b/example1.html
@@ -4,11 +4,8 @@
 	<meta charset="utf-8">
 	<title>Icon Array</title>
 
-	<script src="d3.v3.js" charset="utf-8">
-	</script>
-	
-	<script type="text/javascript" src="icon-array.js">
-	</script>
+	<script src="d3.v3.js" charset="utf-8"></script>
+	<script type="text/javascript" src="icon-array.js"></script>
 	
 	<style>
 
@@ -34,10 +31,10 @@
 	}
 	</style>
 
-	<title>D3 Icon Array</title>
+	<title>Icon Array - example 1</title>
 </head>
 <body>
-	<h3>Icon array showing various outcomes associated with Group B Strep (GBS) among pregnant women</h3>
+	<h3>Prevalence of outcomes associated with Group B Strep (GBS) among pregnant women</h3>
 	
 	<div class="key"></div>
 	<div class="content"></div>
