--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
 </div>
 </body>
 <script type="text/javascript">
-var layout = d3_iconarray.layout()
-							//.width(10)
-							.widthFirst(true);
-
+var layout = d3_iconarray.layout();
 
 var data = d3.range(0, 2500, 1);
-
+data = [1,2,3,4];
 var grid = layout(data);
-
+console.log(JSON.stringify(grid))
 var width = 500, 
 	height = 500, 
-	margin = {top:10, bottom:10, left:10, right:10 };
+	margin = {top:40, bottom:10, left:40, right:10 };
 
 var arrayScale = d3_iconarray.scale()
 	.domain([ 0, layout.maxDimension(data.length) ])
@@ -43,7 +40,7 @@ svg.selectAll('circle')
 	.append('circle')
 		.attr('cx',function(d){ return arrayScale(d.position.x) })
 		.attr('cy',function(d){ return arrayScale(d.position.y) })
-		.attr('r', 2);
+		.attr('r', 10);
 
 
 </script>
