--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 </div>
 </body>
 <script type="text/javascript">
-var layout = d3_iconarray.layout().height(3);
+var layout = d3_iconarray.layout();
 
 var data = d3.range(0, 2500, 1);
-data = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15];
+
 var grid = layout(data);
-console.log(JSON.stringify(grid))
+
+console.log(layout.position(7))
+
 var width = 500, 
 	height = 500, 
 	margin = {top:40, bottom:10, left:40, right:10 };
@@ -37,11 +39,10 @@ var svg = d3.select('#simple-example')
 svg.selectAll('circle')
 	.data(grid)
 		.enter()
-	.append('text')
-		.text(function(d){return d.data;})
-		.attr('x',function(d){ return arrayScale(d.position.x) })
-		.attr('y',function(d){ return arrayScale(d.position.y) })
-		.attr('r', 10);
+	.append('circle')
+		.attr('cx',function(d){ return arrayScale(d.position.x) })
+		.attr('cy',function(d){ return arrayScale(d.position.y) })
+		.attr('r', 2);
 
 
 </script>
