relative style link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 
 	<script type="text/javascript" src="build/d3-iconarray.js"></script>
-	<link rel="stylesheet" type="text/css" href="http://www.toffeemilkshake.co.uk/words/assets/style.css">
+	<link rel="stylesheet" type="text/css" href="/words/assets/style.css">
 </head>
 <body>
 <h1>D3 icon array</h1>
